[metadata]
name = timonctl
summary = CLI for Timon
description_file =
    README.md
author = OSISM GmbH
author_email = info@osism.tech
home_page = https://github.com/timontech/timonctl
python_requires = >=3.8
classifier =
   Development Status :: 3 - Alpha
   Environment :: Console
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10

[files]
packages =
    timonctl

[entry_points]
console_scripts =
    timonctl = timonctl.main:main
