[metadata]
name = tcsctl
summary = CLI for The Cloudsphere
description_file =
    README.md
long_description = file: README.md
long_description_content_type = text/markdown
author = OSISM GmbH
author_email = info@osism.tech
home_page = https://github.com/thecloudsphere/tcsctl
python_requires = >=3.8
classifier =
   Development Status :: 3 - Alpha
   Environment :: Console
   Intended Audience :: Developers
   Intended Audience :: Information Technology
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10

[options]
include_package_data = True
install_requires = file: requirements.txt
packages =
    tcsctl

[options.package_data]
* = schema/*.yaml

[options.entry_points]
console_scripts =
    tcsctl = tcsctl.main:main
